# XMLResource

./: README.md  XMLResource.sln  example1.txt  output_example.xml
XMLResource/: CMakeLists.txt  Main.cpp  NodeXML.cpp  NodeXML.hpp  TreeXML.cpp  TreeXML.hpp  XMLResource.cpp  XMLResource.hpp  XMLResource.vcxproj  XMLResource.vcxproj.filters  example1.xml
